--- a/INSTALL.htm
+++ b/INSTALL.htm
@@ -4,11 +4,11 @@
 
   <!--
   
-  /* This file simply redirects to ./doc/1.manual/x6.htm */
+  /* This file simply redirects to chapter 6*/
   
   -->
   
-  <meta http-equiv="REFRESH" content="0;url=./doc/1.manual/x6.htm">
+  <meta http-equiv="REFRESH" content="0;url=./doc/1.manual/resources/chapter6.htm">
 
 </head><body>
 redirecting to chapter 6 ...
